2021-07-25 Markus Gans  <guru.mail@muenster.de>
	* Function setMinimizable() to minimize FDialog windows added

2021-07-18 Markus Gans  <guru.mail@muenster.de>
	* Improved the GNU autoconf-archive check

2021-06-26 Markus Gans  <guru.mail@muenster.de>
	* Global non-constant variables are now encapsulated in classes

2021-06-19 Markus Gans  <guru.mail@muenster.de>
	* Moving the creator methods from FTerm to its own class

2021-06-16 Markus Gans  <guru.mail@muenster.de>
	* Converted the internal timer from timeval 
	  to std::chrono::time_point<system_clock>

2021-06-06 Markus Gans  <guru.mail@muenster.de>
	* Bug fixing in FString and FTermDetection
	* FTermDetection now has clean code by using FString instead of char*
	* Replace std::strlen with stringLength

2021-06-03 Markus Gans  <guru.mail@muenster.de>
	* Some FString optimizations

2021-05-30 Markus Gans  <guru.mail@muenster.de>
	* FString internally changed from wchar_t* to std::wstring

2021-05-24 Markus Gans  <guru.mail@muenster.de>
	* Using std::string for the attribute buffer

2021-05-22 Markus Gans  <guru.mail@muenster.de>
	* Convert FOptiMove from char[] to std::string

2021-05-13 Markus Gans  <guru.mail@muenster.de>
	* Prevent duplicate widget in the close widget list

2021-05-07 Markus Gans  <guru.mail@muenster.de>
	* Some pointers were replaced by references

2021-05-04 Markus Gans  <guru.mail@muenster.de>
	* Prevent flickering when resizing terminals or redrawing 
	  the screen via ctrl-l

2021-05-02 Markus Gans  <guru.mail@muenster.de>
	* Bugfix for sending multiple SIGWINCH signals from 
	  gnome-terminal under Wayland

2021-05-01 Markus Gans  <guru.mail@muenster.de>
	* Replace some std::bind with lambda functions

2021-04-30 Markus Gans  <guru.mail@muenster.de>
	* Fixes Linux console bug from February 20, 2021

2021-04-27 Markus Gans  <guru.mail@muenster.de>
	* Code optimization at widget focus

2021-04-24 Markus Gans  <guru.mail@muenster.de>
	* Fixed mutex deadlock in FLogger
